[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinabot"
version = "0.1.0"
description = "Local AI agent with CLI and Telegram interfaces"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.30",
    "mcp>=1.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "typer>=0.9",
    "croniter>=1.0",
    "groq>=0.9",
    "openai>=1.50",
    "httpx>=0.24",
]

[project.scripts]
tina = "tinabot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tinabot"]
